--- a/mocker-front/src/app/component/group/component/group/group.component.html
+++ b/mocker-front/src/app/component/group/component/group/group.component.html
@@ -19,7 +19,7 @@
   </div>
   <div class='tw-p-5 tw-w-[calc(100%_-_384px)]'>
     <moc-tabs *ngIf='group?.id'>
-      <moc-tab mocTitle='PROJECT' mocIcon='fa-regular fa-list'>
+      <moc-tab mocTitle='PROJECT' mocIcon='fa-solid fa-list'>
         <moc-group-projects [group]='group'></moc-group-projects>
       </moc-tab>
       <moc-tab mocTitle='MEMBER' mocIcon='fa-regular fa-user'>
