--- a/mocker-front/src/app/component/group/modal/add-user/add-user.modal.html
+++ b/mocker-front/src/app/component/group/modal/add-user/add-user.modal.html
@@ -1,6 +1,6 @@
 <div class='' popup id='main' [modal]='this'>
   <div class='tw-text-sm tw-w-112 tw-p-8 tw-text-center'>
-    <i class='tw-text-5xl fa-regular fa-floppy-disk'></i>
+    <i class='tw-text-5xl fa-solid fa-floppy-disk'></i>
     <p class='tw-mt-3 tw-font-medium'>{{ 'modal.add_user.title' | translate }}</p>
     <div class='tw-relative'>
       <moc-input mocClass='tw-mt-3' [mocControl]='searchFormControl'
