--- a/mocker-front/src/app/component/project/component/project/project.component.html
+++ b/mocker-front/src/app/component/project/component/project/project.component.html
@@ -25,7 +25,7 @@
   </div>
   <div class='tw-p-5 tw-w-[calc(100%_-_384px)]'>
     <moc-tabs>
-      <moc-tab mocTitle='SCHEMA' mocIcon='fa-regular fa-diagram-project'>
+      <moc-tab mocTitle='SCHEMA' mocIcon='fa-solid fa-diagram-project'>
         <moc-project-schemas [project]='project'></moc-project-schemas>
       </moc-tab>
     </moc-tabs>
