--- a/mocker-front/src/app/component/schema/modal/relation-config/relation-config.modal.html
+++ b/mocker-front/src/app/component/schema/modal/relation-config/relation-config.modal.html
@@ -17,7 +17,7 @@
       <moc-button [control]='formGroup.controls.relationType'
                   [label]='label'
                   mocClass='tw-mt-3'
-                  icon='fa-solid fa-arrow-up-arrow-down'
+                  icon='fa-solid fa-repeat'
                   selfClass='tw-text-left btn-light'></moc-button>
     </moc-dropdown>
     <div class='tw-flex tw-mt-3 tw-float-right tw-clear-both'>
