--- a/mocker-front/src/app/shared/component/input/input.component.html
+++ b/mocker-front/src/app/shared/component/input/input.component.html
@@ -23,7 +23,7 @@
     <div (click)='showPasswordChange()'
          *ngIf='isShowEye'
          class='tw-absolute tw-right-3 tw-top-4 tw-cursor-pointer tw-text-lg'>
-      <i class='fa-regular fa-eye{{ isShowPassword ? "-slash" : "" }} tw-text-gray'></i>
+      <i class='fa-solid fa-eye{{ isShowPassword ? "-slash" : "" }} tw-text-gray'></i>
     </div>
   </div>
   <div *ngIf='isValidated && mocControl.invalid && mocControl.errors'>
