--- a/mocker-front/src/app/component/schema/component/diagram/diagram.component.html
+++ b/mocker-front/src/app/component/schema/component/diagram/diagram.component.html
@@ -5,13 +5,13 @@
                   label='component.diagram.create_table' selfClass='btn-primary tw-text-left'></moc-button>
       <moc-button (click)='download()' mocClass='tw-w-44' icon='fa-solid fa-download'
                   label='component.diagram.download' selfClass='btn-primary tw-text-left'></moc-button>
-      <moc-button (click)='preview()' mocClass='tw-w-44' icon='fa-solid fa-display-code'
+      <moc-button (click)='preview()' mocClass='tw-w-44' icon='fa-solid fa-display'
                   label='component.diagram.preview' selfClass='btn-light tw-text-left'></moc-button>
     </div>
     <div class='tw-flex tw-ml-5'>
       <span class='tw-mt-3 tw-mx-5'>{{ 'component.diagram.format' | translate }}</span>
       <moc-dropdown [options]='formats'>
-        <moc-button [label]='formGroup.controls.format.value' mocClass='tw-w-32' icon='fa-solid fa-arrow-up-arrow-down'
+        <moc-button [label]='formGroup.controls.format.value' mocClass='tw-w-32' icon='fa-solid fa-repeat'
                     selfClass='tw-text-left btn-light'></moc-button>
       </moc-dropdown>
       <span class='tw-mt-3 tw-mx-5'>{{ 'component.diagram.filename' | translate }}</span>
