--- a/mocker-front/src/app/shared/component/copyright/copyright.component.html
+++ b/mocker-front/src/app/shared/component/copyright/copyright.component.html
@@ -1,6 +1,6 @@
 <div class='{{ mocClass }} tw-text-center tw-mb-3 tw-text-sm' id='main'>
   <i class='fa-regular fa-copyright'></i>
-  <span class='tw-font-medium'>{{ 'component.copyright.company' | translate }}
+  <span class='tw-ml-2 tw-font-medium'>{{ 'component.copyright.company' | translate }}
     | <a href='#'
          class='hover:tw-underline hover:tw-text-blue tw-text-blue'>{{ 'component.copyright.term' | translate }}</a>
     | <a href='#'
