--- a/mocker-front/src/app/component/schema/component/diagram/diagram.component.html
+++ b/mocker-front/src/app/component/schema/component/diagram/diagram.component.html
@@ -11,7 +11,7 @@
     <div class='tw-flex tw-ml-5'>
       <span class='tw-mt-3 tw-mx-5'>{{ 'component.diagram.format' | translate }}</span>
       <moc-dropdown [options]='formats'>
-        <moc-button [label]='formGroup.controls.format.value' mocClass='tw-w-32' icon='fa-solid fa-repeat'
+        <moc-button [label]='formGroup.controls.format.value' mocClass='tw-w-32' icon='fa-solid fa-sort'
                     selfClass='tw-text-left btn-light'></moc-button>
       </moc-dropdown>
       <span class='tw-mt-3 tw-mx-5'>{{ 'component.diagram.filename' | translate }}</span>
