[FE] Fix UI button.

--- a/mocker-front/src/app/component/auth/component/forget-password/forget-password.component.html
+++ b/mocker-front/src/app/component/auth/component/forget-password/forget-password.component.html
@@ -6,11 +6,11 @@
     <moc-input [mocControl]='username'
                [mocPlaceholder]='"component.forget_password.email_address_placeholder" | translate'
                mocClass='tw-mt-2'
-               selfClass='{{ isNotExistedUsername ? "invalid" : "" }} tw-mt-2'
+               mocStyle='{{ isNotExistedUsername ? "invalid" : "" }} tw-mt-2'
                type='email'></moc-input>
     <p *ngIf='isNotExistedUsername'
        class='tw-mt-2 tw-text-red'>{{ 'component.forget_password.username_not_exist' | translate }}</p>
-    <moc-button (click)='submit()' mocClass='tw-mt-3' selfClass='btn-primary'
+    <moc-button (click)='submit()' mocClass='tw-mt-3' mocStyle='btn-primary'
                 label='component.forget_password.send_verification_code'></moc-button>
     <hr class='tw-mt-8'/>
     <p class='tw-mt-4 tw-text-blue'>
