--- a/mocker-front/src/app/component/auth/modal/change-password/change-password.modal.html
+++ b/mocker-front/src/app/component/auth/modal/change-password/change-password.modal.html
@@ -15,12 +15,12 @@
                type='password'></moc-input>
     <moc-input [mocControl]='formGroup.controls.confirmPassword'
                [mocPlaceholder]='"modal.change_password.confirm_password_placeholder" | translate'
-               [selfClass]='isPasswordNotMatch ? "invalid" : ""'
+               [mocStyle]='isPasswordNotMatch ? "invalid" : ""'
                mocLabel='modal.change_password.confirm_password'
                type='password'></moc-input>
     <p *ngIf='isPasswordNotMatch'
        class='tw-text-red tw-text-center tw-mt-2'>{{ 'modal.change_password.password_not_match' | translate }}</p>
     <moc-button (click)='submit()' mocClass='tw-mt-5' label='modal.change_password.change_password'
-                selfClass='btn-primary'></moc-button>
+                mocStyle='btn-primary'></moc-button>
   </div>
 </div>
