--- a/mocker-front/src/app/component/group/modal/add-user/add-user.modal.html
+++ b/mocker-front/src/app/component/group/modal/add-user/add-user.modal.html
@@ -15,6 +15,6 @@
         </p>
       </div>
     </div>
-    <moc-button mocClass='tw-mt-3' selfClass='btn-primary' label='modal.add_user.add_user'></moc-button>
+    <moc-button mocClass='tw-mt-3' mocStyle='btn-primary' label='modal.add_user.add_user'></moc-button>
   </div>
 </div>
