--- a/mocker-front/src/app/shared/component/button/button.component.scss
+++ b/mocker-front/src/app/shared/component/button/button.component.scss
@@ -5,11 +5,11 @@
     @apply tw-text-white tw-bg-blue;
   }
 
-  .btn-light {
+  .btn-secondary {
     @apply tw-bg-white tw-border tw-text-black;
   }
 
-  .btn-red {
+  .btn-primary-red {
     @apply tw-bg-red tw-border tw-text-white;
   }
 
