--- a/mocker-front/src/app/shared/component/grid/grid.component.html
+++ b/mocker-front/src/app/shared/component/grid/grid.component.html
@@ -1,6 +1,6 @@
 <div [class]='mocClass' id='main'>
   <div class='tw-flex tw-justify-between'>
-    <moc-button (click)='createAction.click()' selfClass='btn-primary tw-uppercase'
+    <moc-button (click)='createAction.click()' mocStyle='btn-primary tw-uppercase'
                 [label]='createAction.content'></moc-button>
     <moc-input mocClass='tw-w-96' [mocPlaceholder]='searchPlaceholder' [mocControl]='formGroup.controls.search'></moc-input>
   </div>
