--- a/mocker-front/src/app/shared/component/tab1/tab1.component.html
+++ b/mocker-front/src/app/shared/component/tab1/tab1.component.html
@@ -1,5 +1,5 @@
 <div [class]='mocClass' id='main'>
-  <div [class]='selfClass'>
+  <div [class]='mocStyle'>
     <button (click)='change(index)'
             *ngFor='let tab of tabs; let index=index'
             class='tw-py-3 tw-px-5 tw-font-medium tw-rounded-t-md {{ index === current ? "tw-bg-blue tw-text-white" : "tab-hover" }}'>
