--- a/mocker-front/src/app/shared/component/table/table.component.html
+++ b/mocker-front/src/app/shared/component/table/table.component.html
@@ -1,5 +1,5 @@
 <div class='{{ mocClass }} tw-text-sm tw-rounded-md tw-z-10 tw-drop-shadow-xl' id='main'>
-  <div class='{{ selfClass }} tw-border tw-rounded tw-w-72'>
+  <div class='{{ mocStyle }} tw-border tw-rounded tw-w-72'>
     <p class='tw-bg-blue tw-h-8 tw-text-center tw-leading-8 tw-font-medium tw-text-white tw-uppercase'>
       <i class='fa-solid fa-table tw-mr-3'></i>
       {{ table.name }}
