--- a/mocker-front/src/app/shared/modal/preview/preview.modal.html
+++ b/mocker-front/src/app/shared/modal/preview/preview.modal.html
@@ -1,7 +1,7 @@
 <div [modal]='this' id='main' popup>
   <div class='tw-w-300 tw-h-200 tw-text-sm tw-p-5'>
     <p class='tw-font-medium tw-text-lg'>{{ 'modal.preview.title' | translate }}</p>
-    <moc-tab1 [tabs]='tabs' selfClass='tw-text-center'>
+    <moc-tab1 [tabs]='tabs' mocStyle='tw-text-center'>
       <ng-template #table>
         <div class='tw-overflow-auto tw-h-150 tw-mt-5'>
           <table *ngIf='options.data.length' class='tw-w-full'>
@@ -34,8 +34,8 @@
       <p>{{ 'modal.preview.show_first_100_rows' | translate }}</p>
       <div class='tw-flex tw-pr-5'>
         <moc-button (click)='options.download()' label='modal.preview.download_data'
-                    selfClass='tw-px-5 btn-primary'></moc-button>
-        <moc-button (click)='close()' label='modal.preview.close' selfClass='tw-ml-5 tw-px-5 btn-light'></moc-button>
+                    mocStyle='tw-px-5 btn-primary'></moc-button>
+        <moc-button (click)='close()' label='modal.preview.close' mocStyle='tw-ml-5 tw-px-5 btn-secondary'></moc-button>
       </div>
     </div>
   </div>
