--- a/mocker-front/src/app/component/general/component/general/general.component.html
+++ b/mocker-front/src/app/component/general/component/general/general.component.html
@@ -5,25 +5,25 @@
   <hr class='tw-mt-5'/>
   <div [formGroup]='formGroup' class='tw-flex tw-mt-5'>
     <span class='tw-mt-3 tw-mr-5'>{{ 'component.general.row' | translate }}</span>
-    <moc-input [mocControl]='formGroup.controls.rows' mocClass='tw-w-24' selfClass='tw-px-5'></moc-input>
+    <moc-input [mocControl]='formGroup.controls.rows' mocClass='tw-w-24' mocStyle='tw-px-5'></moc-input>
     <span class='tw-mt-3 tw-mx-5'>{{ 'component.general.format' | translate }}</span>
     <moc-dropdown [options]='formats'>
       <moc-button [label]='formGroup.controls.format.value' mocClass='tw-w-32' icon='fa-solid fa-sort'
-                  selfClass='tw-text-left btn-light'></moc-button>
+                  mocStyle='tw-text-left btn-secondary'></moc-button>
     </moc-dropdown>
     <span *ngIf='isShowTableNameField' class='tw-mt-3 tw-mx-5'>{{ 'component.general.table_name' | translate }}</span>
     <moc-input *ngIf='isShowTableNameField' [mocControl]='formGroup.controls.table.controls.name' mocClass='tw-w-32'
-               selfClass='tw-px-5'></moc-input>
+               mocStyle='tw-px-5'></moc-input>
   </div>
   <hr class='tw-mt-5'/>
   <div class='tw-mt-5 tw-flex'>
     <moc-button (click)='download()' mocClass='tw-w-52' label='component.general.download_data'
-                selfClass='btn-primary'></moc-button>
+                mocStyle='btn-primary'></moc-button>
     <moc-button (click)='preview()' mocClass='tw-w-52 tw-ml-3' label='component.general.preview'
-                selfClass='tw-px-5 btn-light'></moc-button>
+                mocStyle='tw-px-5 btn-secondary'></moc-button>
     <moc-button mocClass='tw-w-52 tw-ml-3' label='component.general.save_this_table'
-                selfClass='tw-px-5 btn-light'></moc-button>
+                mocStyle='tw-px-5 btn-secondary'></moc-button>
     <moc-button mocClass='tw-w-52 tw-ml-3' icon='fa-solid fa-sort' label='component.general.more'
-                selfClass='tw-px-5 btn-light'></moc-button>
+                mocStyle='tw-px-5 btn-secondary'></moc-button>
   </div>
 </div>
