--- a/mocker-front/src/app/component/schema/component/diagram/diagram.component.html
+++ b/mocker-front/src/app/component/schema/component/diagram/diagram.component.html
@@ -2,21 +2,21 @@
   <div class='tw-flex tw-items-start'>
     <div class='tw-flex tw-items-center tw-w-150 tw-justify-between'>
       <moc-button (click)='createTable()' mocClass='tw-w-52' icon='fa-solid fa-folder-plus'
-                  label='component.diagram.create_table' selfClass='btn-primary tw-text-left'></moc-button>
+                  label='component.diagram.create_table' mocStyle='btn-primary tw-text-left'></moc-button>
       <moc-button (click)='download()' mocClass='tw-w-44' icon='fa-solid fa-download'
-                  label='component.diagram.download' selfClass='btn-primary tw-text-left'></moc-button>
+                  label='component.diagram.download' mocStyle='btn-primary tw-text-left'></moc-button>
       <moc-button (click)='preview()' mocClass='tw-w-44' icon='fa-solid fa-display'
-                  label='component.diagram.preview' selfClass='btn-light tw-text-left'></moc-button>
+                  label='component.diagram.preview' mocStyle='btn-secondary tw-text-left'></moc-button>
     </div>
     <div class='tw-flex tw-ml-5'>
       <span class='tw-mt-3 tw-mx-5'>{{ 'component.diagram.format' | translate }}</span>
       <moc-dropdown [options]='formats'>
         <moc-button [label]='formGroup.controls.format.value' mocClass='tw-w-32' icon='fa-solid fa-sort'
-                    selfClass='tw-text-left btn-light'></moc-button>
+                    mocStyle='tw-text-left btn-secondary'></moc-button>
       </moc-dropdown>
       <span class='tw-mt-3 tw-mx-5'>{{ 'component.diagram.filename' | translate }}</span>
       <moc-input [mocControl]='formGroup.controls.filename' mocClass='tw-w-32'
-                 selfClass='tw-px-5'></moc-input>
+                 mocStyle='tw-px-5'></moc-input>
     </div>
   </div>
   <div (scroll)='onScroll()' class='diagram tw-border tw-mt-3 tw-h-full tw-w-full tw-overflow-auto'>
