Fix Grid search value and button.

--- a/mocker-front/src/app/component/group/component/group/group.component.html
+++ b/mocker-front/src/app/component/group/component/group/group.component.html
@@ -5,7 +5,7 @@
       <moc-input [mocControl]='formGroup.controls.name' mocLabel='component.group.name'></moc-input>
       <moc-input [mocControl]='formGroup.controls.description' [mocTextArea]='true'
                  mocLabel='component.group.description'
-                 mocStyle='tw-h-32 tw-overflow-auto'></moc-input>
+                 mocStyle='tw-min-h-86 tw-overflow-auto'></moc-input>
       <div class='tw-mt-3 tw-flex tw-justify-between tw-items-center'>
         <moc-button (click)='submit()' icon='fa-solid fa-floppy-disk'
                     label='component.group.save'
