Fix bugs in group module.

--- a/mocker-front/src/app/shared/modal/modal-provider/dialog/dialog.modal.html
+++ b/mocker-front/src/app/shared/modal/modal-provider/dialog/dialog.modal.html
@@ -17,7 +17,7 @@
                     *ngIf='isShowBtnOK'
                     mocClass='tw-ml-1'
                     label='modal.dialog.ok'
-                    mocStyle='tw-w-12 btn-primary tw-bg-{{ color }}'>
+                    mocStyle='btn-primary tw-bg-{{ color }}'>
         </moc-button>
       </div>
     </div>
