Fix bugs in group module.

--- a/mocker-front/src/app/component/group/component/group-projects/group-projects.component.html
+++ b/mocker-front/src/app/component/group/component/group-projects/group-projects.component.html
@@ -1,4 +1,4 @@
 <div class='' id='main'>
-  <moc-description [description]='"component.projects.information" | translate' class='tw-mt-5'></moc-description>
+  <moc-description mocClass='tw-mt-5'>{{ 'component.projects.information' | translate }}</moc-description>
   <moc-grid mocClass='tw-mt-5' [createAction]='createAction' [mocGrid]='grid'></moc-grid>
 </div>
