--- a/mocker-front/src/app/component/people/component/person/person.component.html
+++ b/mocker-front/src/app/component/people/component/person/person.component.html
@@ -43,7 +43,7 @@
     <div class='tw-p-5 tw-w-49/100 tw-border tw-rounded'>
       <p class='tw-font-medium'>{{ 'component.person.my_payments' | translate }}</p>
       <p class='tw-mt-3'>{{ 'Here are all the payments that you have made for MOCKER:' }}</p>
-      <moc-description class='tw-mt-3' description='You have not made any payments.'></moc-description>
+      <moc-description mocClass='tw-mt-3'>{{ 'You have not made any payments.' | translate }}</moc-description>
     </div>
   </div>
   <moc-copyright mocClass='tw-mt-10'></moc-copyright>
