--- a/mocker-front/src/app/shared/component/description/description.component.html
+++ b/mocker-front/src/app/shared/component/description/description.component.html
@@ -1,1 +1,3 @@
-<p class='{{ class }} tw-px-2 tw-py-3 tw-border tw-rounded'>{{ description }}</p>
+<p class='{{ mocClass }} tw-px-2 tw-py-3 tw-border tw-rounded'>
+  <ng-content></ng-content>
+</p>
