--- a/mocker-front/src/app/component/group/component/group-members/group-members.component.html
+++ b/mocker-front/src/app/component/group/component/group-members/group-members.component.html
@@ -1,3 +1,4 @@
 <div class='' id='main'>
+  <moc-description mocClass='tw-mt-5'>{{ 'component.group_members.description' | translate }}</moc-description>
   <moc-grid mocClass='tw-mt-5' [createAction]='createAction' [mocGrid]='grid'></moc-grid>
 </div>
