--- a/mocker-front/src/app/component/project/component/project-schemas/project-schemas.component.html
+++ b/mocker-front/src/app/component/project/component/project-schemas/project-schemas.component.html
@@ -1,5 +1,4 @@
 <div class='' id='main'>
-  <moc-description [description]='"component.schemas.information" | translate'
-                   class='tw-mt-5'></moc-description>
+  <moc-description mocClass='tw-mt-5'>{{ 'component.schemas.information' | translate }}</moc-description>
   <moc-grid mocClass='tw-mt-5' [createAction]='createAction' [mocGrid]='grid'></moc-grid>
 </div>
